--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -82,7 +82,7 @@
                 title="Address: Shop26A Rhodes Waterside, 1 Rider Blvd, Rhodes NSW 2138"
                 onmouseover="i=2; wave(i)"></a>
         </div>
-        <div class="container gallery-container" style="display:-webkit-flex;justify-content:center; background-color:#fcf9f4;">
+        <div class="container gallery-container" style="margin-bottom: 20px;justify-content:center; background-color:#fcf9f4;">
             <div class="col-sm-12">
                 <form class="col-lg-12">
                     <br><br>
