--- a/bootstrap学习/home.html
+++ b/bootstrap学习/home.html
@@ -17,7 +17,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Sriracha&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/commonstyle.css">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/baguetteBox.min.css">
     <link rel="stylesheet" href="css/gallery-grid.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/castle.png">
@@ -72,20 +73,52 @@
                 <li data-target="#carousel" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel" data-slide-to="1"></li>
                 <li data-target="#carousel" data-slide-to="2"></li>
-                <li data-target="#carousel" data-slide-to="3"></li>                
+                <li data-target="#carousel" data-slide-to="3"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/fuben5.jpg" class="d-block w-100" alt="..." style="height: 500px;">
+                    <img src="images/fuben5.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Welcome to Vitaland Kids Cafe</h5>
+                        <div class="clearfix"></div>
+                        <h1>Play & Fun</h1>
+                        <div class="clearfix"></div>
+                        <p>A space for kids to play and interact with other children. Explore and learn while parents enjoy a coffe and snacks</p>
+                        <div class="clearfix"></div>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/fuben2.jpg" class="d-block w-100" alt="..." style="height: 500px;">
+                    <img src="images/fuben2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Welcome to Vitaland Kids Cafe</h5>
+                        <div class="clearfix"></div>
+                        <h1>Play & Fun</h1>
+                        <div class="clearfix"></div>
+                        <p>A space for kids to play and interact with other children. Explore and learn while parents enjoy a coffe and snacks</p>
+                        <div class="clearfix"></div>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/fuben1.jpg" class="d-block w-100" alt="..." style="height: 500px;">
+                    <img src="images/fuben1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Welcome to Vitaland Kids Cafe</h5>
+                        <div class="clearfix"></div>
+                        <h1>Play & Fun</h1>
+                        <div class="clearfix"></div>
+                        <p>A space for kids to play and interact with other children. Explore and learn while parents enjoy a coffe and snacks</p>
+                        <div class="clearfix"></div>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/fuben4.jpeg" class="d-block w-100" alt="..." style="height: 500px;">
+                    <img src="images/fuben4.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Welcome to Vitaland Kids Cafe</h5>
+                        <div class="clearfix"></div>
+                        <h1>Play & Fun</h1>
+                        <div class="clearfix"></div>
+                        <p>A space for kids to play and interact with other children. Explore and learn while parents enjoy a coffe and snacks</p>
+                        <div class="clearfix"></div>
+                    </div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -98,22 +131,59 @@
             </a>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
-            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
-            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div>
+            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:20px;">
+            </div>
+            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:20px;">
+            </div>
+            <div class="col-lg-4 col-xs-4"><img class="img-fluid" src="images/train.png" alt="" style="height:20px;">
+            </div>
             <!-- <div class="col-lg-3 col-sm-3"><img class="img-fluid" src="images/train.png" alt="" style="height:40px;"></div> -->
         </div>
     </div>
     <div class="htmleaf-container" style="margin-bottom: 20px">
         <div class="container gallery-container">
-
+            <h1>Vitaland</h1>
+            <h2>Kids Cafe</h2>
+            <div class="responsive">
+                <div class="gallery">
+                    <img src="images/item1.png" alt="">
+                    <div class="desc">
+                        <h3>Play Areas</h3>
+                    </div>
+                    <div class="desc-detail">
+                        <p>Children can explore and play at their own leisure.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="responsive">
+                <div class="gallery">
+                    <img src="images/item2.png" alt="">
+                    <div class="desc">
+                        <h3>Cafe & Food</h3>
+                    </div>
+                    <div class="desc-detail">
+                        <p>We have a variety of food and beverages at our cafe.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="responsive">
+                <div class="gallery">
+                    <img src="images/item3.png" alt="">
+                    <div class="desc">
+                        <h3>Parties</h3>
+                    </div>
+                    <div class="desc-detail">
+                        <p>Host small intimate parties or hire out the whole venue.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix"></div>
             <p class="page-description text-left">
-            <h1>Photo Gallery</h1>
+            <h2>Photo Gallery</h2>
             </p>
             <div class="col-sm-12 clearfix">
                 <div class="col-sm-10" style="float: left;">
-                    <h4 class="page-description text-left col-sm-12" style="font-family: 'Sriracha', cursive;">Enjoy
-                        vitaland everyday</h4>
+                    <h4 class="page-description text-left col-sm-12">Enjoy vitaland everyday</h4>
                 </div>
                 <div class="col-sm-2" style="float: left;"><button class="btn1 btn--stripe btn--radius col-sm-12"
                         onclick="window.location.href = 'gallery.html';">View More</button></div>
